--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    /* background:rgb(229, 216, 199); */
-}
+
 .header{
     position: fixed;
     top: 0;
@@ -17,7 +15,8 @@ body{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    background-color: rgb(210, 196, 196);
+    background-color:#e6e6e6;
+    font-family: "Roboto Mono", monospace;
 }
 .logo{
     font-size: 35px;
@@ -43,13 +42,14 @@ body{
 .nav a{
     text-decoration: none;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 800;
     margin-left: 35px;
     color: rgb(212, 94, 114);
 }
 
 .nav a:hover{
-    color: beige;
+    color: #bc0820;
+   
 }
 .logo:hover{
     color: #fff;
@@ -65,6 +65,26 @@ body{
 }
 .girl{
     margin-top: -70px;
+    margin-left: -150px;
+}
+.box:nth-child(even){
+    margin-left: -500px;
+    width: 600px;
+}
+.btn-H{
+    width: 120px;
+    height:50px;
+    margin:5px;
+    padding: 5px;
+    border: 2px solid rgb(212, 94, 114) ;
+    background-color: rgb(212, 94, 114);
+    border-radius: 30px;
+    font-size: 16px;
+    color: white;
+}
+.btn-H a{
+text-decoration: none;
+color: white;
 }
 
 .btn-box{
@@ -185,6 +205,7 @@ width: 0;
 .row .col-8{
     color: rgb(212, 94, 114);
     font-size: 40px;
+    font-family: "Roboto Mono", monospace;
 }
 .about_me {
     height: 100%;
@@ -197,17 +218,20 @@ width: 0;
     margin-top: 100px;
 }
 ._p{
-   margin-left:600px;
+   /* margin-left:600px; */
     color: rgb(212, 94, 114);
     font-size: 60px;
     font-weight: 700;
+    text-align: center;
+  
 }
+
        .col-8{
 
         font-size: 20px;
         font-weight: 700;
-        color: rgb(212, 94, 114);
-        text-shadow: 0 0 5px rgb(87, 83, 83),0 0 10px rgb(47, 35, 35),0 0 15px rgb(163, 127, 127);
+        color: rgb(168, 153, 156);
+        /* text-shadow: 0 0 5px rgb(87, 83, 83),0 0 10px rgb(47, 35, 35),0 0 15px rgb(163, 127, 127); */
         
         }
       
@@ -254,7 +278,7 @@ width: 0;
             padding: 0px 0px 20px 30px;
         }
         .col .contents{
-            padding: 0px 30px;
+            /* padding: 0px 30px; */
             border-left: 2px solid #bababa;
         }
         .col .contents .box{
@@ -267,7 +291,7 @@ width: 0;
             margin-bottom: 20px;
         }
         .col .contents .box:hover{
-            box-shadow: 0px 3px 12px 0px #ccc;
+            box-shadow: 0px 3px 12px 0px #a5a4a4;
             border: 1px solid transparent;
         }
         .col .contents .box::before{
@@ -343,9 +367,252 @@ width: 0;
            
             /* Adjust the angle as needed */
              
-              transform: rotate(350deg);
-              margin-top: 100px;
+              transform: rotate(360deg);
+              margin-top: -30px;
               margin-left: 200px;
-              width: 700px;
+              width: 900px;
           }
+          
+       .proj_container{
+        text-align: center;
+        display: flex;
+        align-content:center ;
+        margin-top: -570px;
+        margin-left: -400px;
+        transform: rotate(360deg);
+       }
+       .col-2 a{
+        /* color: rgb(228, 224, 236); */
+        text-decoration:none ;
+        /* margin-top: 20px; */
+        margin-left:-20px;
+       text-align: center;
+       align-items: center;
        
+       
+        
+       }
+       .proj_container img{
+        margin-top: 90px;
+        margin-left: -300px;
+       }
+       /* --------------------------footer=------------------------- */
+
+       footer{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: auto;
+        background-color: #e6e6e6;
+        padding: 60px 10%;
+    }
+    
+    ul{
+        list-style: none;
+    }
+    
+    .footer-col{
+        width: 25%;
+    }
+    
+    .footer-col h4{
+        position: relative;
+        margin-bottom: 30px;
+        font-weight: 400;
+        font-size: 22px;
+        color: rgb(212, 94, 114);
+        text-transform: capitalize;
+    }
+    
+    .footer-col h4::before{
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -6px;
+        background-color: rgb(212, 94, 114);
+        height: 2px;
+        width: 40px;
+    }
+    
+    ul li:not(:last-child){
+        margin-bottom: 8px;
+    }
+    
+    ul li a{
+        display: block;
+        font-size: 19px;
+        text-transform: capitalize;
+        color: #bdb6b6;
+        text-decoration: none;
+        transition: 0.4s;
+    }
+    
+    ul li a:hover{
+        color: #bc0820;
+        padding-left: 2px;
+    }
+    
+    .links a{
+        display: inline-block;
+        height: 44px;
+        width: 44px;
+        color: white;
+        background-color:  rgb(212, 94, 114);
+        margin: 0 8px 8px 0;
+        text-align: center;
+        line-height: 44px;
+        border-radius: 50%;
+        transition: 0.4s;
+    }
+    
+    .links a:hover{
+        color:#bc0820;
+        background-color: white;
+    }
+    
+    @media(max-width: 740px){
+        .footer-col{
+            width: 50%;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+    
+        .footer-col h4::before{
+            all: unset;
+        }
+    }
+    
+    @media(max-width: 555px){
+        .footer-col{
+            width: 100%;
+        }}
+        /* cards =======================================================*/
+
+        .card-container{
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 100px;
+            margin-bottom: 90px;      
+        }
+.card{
+    width: 270px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    margin:10px;
+
+}
+.card img{
+    width: 50%;
+    height: auto;
+    margin: auto;
+}
+.card-content{
+padding: 16px;
+margin-left: 10px ;
+}
+.card-content h3{
+    font-size: 28px;
+    margin-bottom: 8px;
+    margin-left: 10px;
+    text-align: center;
+
+}
+.card-content p{
+    color: #666;
+    font-size: 15px;
+    line-height: 1.3;
+    text-align: center;
+    
+}
+.card:hover{
+    box-shadow: 0px 3px 12px 0px #979797;
+    border: 2px solid transparent;
+}
+.quote{
+  font-family: "Caveat", cursive;
+  font-size: 50px;
+  font-weight:700;
+  font-style: normal;
+  color: #666;
+}
+
+/* cards for projects */
+
+
+
+.card-container2{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: -600px;
+    margin-left: -150px;
+    margin-bottom: 40px;      
+    position: absolute;
+}
+.card-p{
+width: 150px;
+border-radius: 8px;
+overflow: hidden;
+box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+margin:10px;
+
+
+}
+.card-p img{
+width: 50%;
+height: auto;
+margin: auto;
+}
+.card-content2{
+padding: 16px;
+margin-left: 10px ;
+}
+.card-content2 h3{
+font-size: 20px;
+margin-bottom: 8px;
+margin-left: 10px;
+text-align: center;
+
+}
+.card-content2 p{
+color: #4e4c4c;
+font-size: 10px;
+line-height: 1.3;
+text-align: center;
+
+}
+.card-p:hover{
+box-shadow: 0px 3px 12px 0px #979797;
+border: 2px solid transparent;
+}
+.my_proj{
+    margin-top: -120px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #f09;
+    text-align: center;
+}
+
+.linkat{
+    width: 100%;
+    height: 20px;
+    background-color: #bc0820;
+    color: #bababa;
+    margin-top: -600px;
+    margin-left: 300px;
+    margin-bottom: 40px; 
+}
+.imgg{
+    perspective: 1000px;
+}
+.imggg {
+    width: 300px; /* يمكن تعديل الحجم حسب الحاجة */
+    transition: transform 0.5s, box-shadow 0.5s; /* انتقال سلس للتحولات والظلال */
+    transform: rotateY(0deg) rotateX(0deg); /* الوضع الافتراضي */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* الظلال لإعطاء عمق */
+}
+.imggg:hover {
+    transform: rotateY(20deg) rotateX(10deg) scale(1.05); /* التحولات عند التمرير فوق الصورة */
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4); /* زيادة الظلال عند التمرير فوق الصورة */
+}
